--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Cyrille Rossant, PhD</title>
   <link rel="icon" type="image/jpeg" href="assets/img/cr_2024.jpg">
 
@@ -273,6 +273,10 @@
                   <img src="assets/img/javascript.svg" alt="JavaScript logo" aria-hidden="true">
                   JavaScript
                 </span>
+                <span class="tag">
+                  <img src="assets/img/unity.svg" alt="Unity logo" aria-hidden="true">
+                  Unity
+                </span>
               </div>
             </div>
           </article>
@@ -446,14 +450,28 @@
           <a href="#top" class="to-top" aria-label="Back to top">Top</a>
         </div>
         <div class="grid publications-grid">
+
           <!-- Nature 2025 -->
           <article class="card publication-card">
             <a href="https://www.nature.com/articles/s41586-025-09235-0" class="card-link">
-              <img src="assets/img/ibl-bwm.webp" alt="Nature 2025 cover" class="card-image">
+              <img src="assets/img/ibl-bwm.webp" alt="Nature 2025" class="card-image">
               <div class="publication-meta">
                 <span class="publication-year">2025</span>
                 <p class="publication-citation">
-                  Angelaki et al. "A brain-wide map of neural activity during complex behaviour." <em>Nature</em>.
+                  IBL et al. "A brain-wide map of neural activity during complex behaviour." <em>Nature</em>.
+                </p>
+              </div>
+            </a>
+          </article>
+
+          <!-- Nature 2025 -->
+          <article class="card publication-card">
+            <a href="https://www.nature.com/articles/s41586-025-09226-1" class="card-link">
+              <img src="assets/img/ibl-prior.webp" alt="Nature 2025" class="card-image">
+              <div class="publication-meta">
+                <span class="publication-year">2025</span>
+                <p class="publication-citation">
+                  Findley et al. "Brain-wide representations of prior information in mouse decision-making." <em>Nature</em>.
                 </p>
               </div>
             </a>
@@ -532,6 +550,17 @@
                 <span class="publication-year">2011</span>
                 <p class="publication-citation">
                   <strong>Rossant</strong> et al. "Sensitivity of noisy neurons to coincident inputs." <em>Journal of Neuroscience</em>.
+                </p>
+              </div>
+            </a>
+          </article>
+
+          <!-- More -->
+          <article class="card publication-card more">
+            <a href="https://scholar.google.fr/citations?user=pAWgP3UAAAAJ&hl=fr" class="card-link">
+              <div class="publication-meta">
+                <p class="publication-citation">
+                  More on Google Scholar...
                 </p>
               </div>
             </a>
@@ -690,7 +719,7 @@
                 <div class="publication-meta">
                   <span class="publication-year">2023</span>
                   <p class="publication-citation">
-                    Findley et al., eds. "Shaken baby syndrome: Investigating the abusive head trauma controversy." <em>Cambridge University Press</em>.
+                    Findley, <strong>Rossant</strong> et al., eds. "Shaken baby syndrome: Investigating the abusive head trauma controversy." <em>Cambridge University Press</em>.
                   </p>
                 </div>
               </a>
